[package]
name = "cyclonetix"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tower = "0.4"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace", "compression-gzip", "compression-deflate", "compression-br"] }
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
rand = "0.8.5"
mime_guess = "2.0.5"
rust-embed = "6.8.1"

