[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
#yew-router = "0.18"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "MouseEvent",
    "DomRect",
    "Element",
    "HtmlSelectElement",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomTokenList",
    "EventTarget"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
#serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde", "js"] }
gloo = { version = "0.11", features = ["net"] }
#stylist = { version = "0.13", features = ["yew", "parser"] }
log = "0.4"
wasm-logger = "0.2"
#getrandom = { version = "0.2", features = ["js"] }
yew-hooks = "0.3"
gloo-utils = "0.2"
gloo-timers = "0.3"
serde-wasm-bindgen = "0.6"